--- a/css/inject.css
+++ b/css/inject.css
@@ -10,12 +10,13 @@ div.x-mask {
     bottom   : 0;
     border   : 2px solid #0052d9;
     z-index  : 99999;
+    cursor   : crosshair;
 }
 
 div.x-container {
     position : absolute;
     border   : 2px dashed #0052d9;
-    z-index  : 9999999;
+    /*z-index  : 9999999;*/
 }
 
 div.x-tools {
