--- a/css/font.css
+++ b/css/font.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2829855 */
-  src: url('//at.alicdn.com/t/font_2829855_onm3wmaaxu.woff2?t=1632398221628') format('woff2'),
-  url('//at.alicdn.com/t/font_2829855_onm3wmaaxu.woff?t=1632398221628') format('woff'),
-  url('//at.alicdn.com/t/font_2829855_onm3wmaaxu.ttf?t=1632398221628') format('truetype');
+  src: url('//at.alicdn.com/t/font_2829855_r1lgz114sb.woff2?t=1634200181370') format('woff2'),
+  url('//at.alicdn.com/t/font_2829855_r1lgz114sb.woff?t=1634200181370') format('woff'),
+  url('//at.alicdn.com/t/font_2829855_r1lgz114sb.ttf?t=1634200181370') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-x-correct:before {
+  content: "\e767";
+}
+
+.icon-x-copy:before {
+  content: "\e6ae";
+}
+
+.icon-x-ocr:before {
+  content: "\e620";
 }
 
 .icon-x-close:before {
