--- a/css/inject.css
+++ b/css/inject.css
@@ -43,3 +43,46 @@ div.x-tools > span {
 div.x-tools > span:hover {
     background : #f7f7f7;
 }
+
+div.x-ocrBox {
+    position   : absolute;
+    background : #f1f3f4;
+    border     : 2px dashed #0052d9;
+}
+
+div.x-ocrBox > ul {
+    list-style : none;
+    padding    : 0.5em;
+    margin     : 0;
+    font-size  : 1.2em;
+}
+
+div.x-ocrBox > ul > li {
+    background    : #fff;
+    padding       : 6px;
+    border-radius : 5px;
+    margin-bottom : 4px;
+}
+
+div.x-ocrTool {
+    position   : absolute;
+    width      : 21px;
+    background : #f1f3f4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.x-ocrTool > span {
+    margin-bottom : 4px;
+}
+
+div.x-ocrTool > span:hover {
+    background : #fff;
+}
+
+input.x-myInput {
+    opacity: 0;
+    position : absolute;
+    bottom   : -3em;
+}
