--- a/css/inject.css
+++ b/css/inject.css
@@ -31,8 +31,8 @@ div.x-tools {
     opacity     : 0;
 }
 
-div.show{
-    opacity: 1;
+div.show {
+    opacity : 1;
 }
 
 div.x-tools > span {
@@ -65,12 +65,12 @@ div.x-ocrBox > ul > li {
 }
 
 div.x-ocrTool {
-    position   : absolute;
-    width      : 21px;
-    background : #f1f3f4;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    position       : absolute;
+    width          : 21px;
+    background     : #f1f3f4;
+    display        : flex;
+    flex-direction : column;
+    align-items    : center;
 }
 
 div.x-ocrTool > span {
@@ -82,7 +82,18 @@ div.x-ocrTool > span:hover {
 }
 
 input.x-myInput {
-    opacity: 0;
+    opacity  : 0;
     position : absolute;
     bottom   : -3em;
+}
+
+iframe.x-iframe {
+    position      : fixed;
+    top           : 0;
+    right         : 0;
+    width         : 300px;
+    height        : 100vh;
+    z-index       : 9999999999;
+    border        : 2px solid #407de3;
+    border-radius : 5px;
 }
