--- a/css/message.css
+++ b/css/message.css
@@ -1,17 +1,15 @@
-div.x-success-message {
-    color         : #67c23a;
+div#xs-message {
     padding       : 10px;
-    background    : #f0f9eb;
-    border        : 1px solid #e1f3d8;
     border-radius : 4px;
-    position      : absolute;
+    position      : fixed;
     top           : 0;
-    left          : 50%;
-    transform     : translateX(-50%);
-    animation  : trace 3s ease-in-out;
+    left          : 40%;
+    /*transform     : translateX(-50%);*/
+    animation     : trace 4s ease-in-out;
+    z-index       : 999;
 }
 
-div.x-success-message > span{
+div#xs-message  > span{
     margin: 0 .5em;
 }
 
@@ -22,4 +20,39 @@ div.x-success-message > span{
     to {
         opacity : 0;
     }
+}
+
+div.x-success-message{
+    color         : #67c23a;
+    background    : #f0f9eb;
+    border        : 1px solid #e1f3d8;
+}
+
+div.x-error-message{
+    color         : #f56c6c;
+    background    : #fef0f0;
+    border        : 1px solid #fde2e2;
+}
+
+div.x-warning-message{
+    color         : #e6a23c;
+    background    : #fdf6ec;
+    border        : 1px solid #faecd8;
+}
+
+div.alwaysOnTop {
+    color         : #0052d9;
+    font-size     : 1.5em;
+    width         : 300px;
+    height        : 50px;
+    line-height   : 50px;
+    text-align    : center;
+    background    : #fff;
+    border-radius : 5px;
+    position      : fixed;
+    top           : .5em;
+    left          : .5em;
+    /*transform     : translateX(-50%);*/
+    box-shadow    : rgba(0, 0, 0, 0.24) 0 3px 8px;
+    z-index       : 99;
 }
