--- a/css/font.css
+++ b/css/font.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2829855 */
-  src: url('//at.alicdn.com/t/font_2829855_2rcmr28l156.woff2?t=1635389172001') format('woff2'),
-  url('//at.alicdn.com/t/font_2829855_2rcmr28l156.woff?t=1635389172001') format('woff'),
-  url('//at.alicdn.com/t/font_2829855_2rcmr28l156.ttf?t=1635389172001') format('truetype');
+  src: url('//at.alicdn.com/t/font_2829855_wjun6zdot3q.woff2?t=1635905415067') format('woff2'),
+  url('//at.alicdn.com/t/font_2829855_wjun6zdot3q.woff?t=1635905415067') format('woff'),
+  url('//at.alicdn.com/t/font_2829855_wjun6zdot3q.ttf?t=1635905415067') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-x-fold-right:before {
+  content: "\e601";
+}
+
+.icon-x-fold-left:before {
+  content: "\e619";
 }
 
 .icon-xs-warning:before {
