--- a/css/inject.css
+++ b/css/inject.css
@@ -3,7 +3,7 @@ body {
 }
 
 div.x-mask {
-    position : absolute;
+    position : fixed;
     top      : 0;
     left     : 0;
     right    : 0;
@@ -87,7 +87,7 @@ input.x-myInput {
     bottom   : -3em;
 }
 
-iframe.x-iframe {
+div.x-iframe {
     position      : fixed;
     top           : 0;
     right         : 0;
@@ -96,4 +96,34 @@ iframe.x-iframe {
     z-index       : 9999999999;
     border        : 2px solid #407de3;
     border-radius : 5px;
+    transition    : width .6s;
+}
+
+div.x-iframe > iframe {
+    width  : 100%;
+    height : 100%;
+    border : none;
+}
+
+div.x-iframe > span.iconfont {
+    width         : 1.6em;
+    height        : 2em;
+    color         : #0052d9;
+    cursor        : pointer;
+    text-align    : center;
+    position      : absolute;
+    z-index       : 9999999;
+    top           : 50%;
+    left          : -1.7em;
+    transform     : translateY(-50%);
+    line-height   : 2em;
+    background    : #fff;
+    border-radius : 5px 0 0 5px;
+    box-shadow    : rgba(17, 17, 26, 0.1) 0 4px 16px,
+                  rgba(17, 17, 26, 0.1) 0 8px 24px,
+                  rgba(17, 17, 26, 0.1) 0 16px 56px;
+}
+
+div.x-iframe > span.iconfont:hover {
+    background : #efefef;
 }
